...
                                const Icon(
                                  Icons.search,
                                  color: Color(0xFF4AA5A6),
                                ),
                                const SizedBox(width: 12),
                                Text(
                                  "Mau ke mana hari ini?",
                                  style: TextStyle(
                                    fontFamily: 'Inter',
                                    fontSize: 14,
                                    color: const Color(
                                      0xFF4AA5A6,
                                    ).withValues(alpha: 0.8),
...
